# dotfiles

./: .dockerignore  .gitignore  .gitmodules  .ssh-nirvana.rc  AGENTS.md  Brewfile  CLAUDE.md  Dockerfile  Dockerfile.test  License  MODERN_CLI_TOOLS.md  README.markdown  README.md  justfile  lefthook.yml
.claude-snapshots/: CLAUDE.md.snapshot
.omc/: project-memory.json
SSHNirvana/: ssh-nirvana.rc.symlink
ack/: ackrc.symlink  install.sh
ag/: install.sh
agents/: README.md
agents/replay-eval/: README.md  pyproject.toml
agents/replay-eval/replay_eval/: __init__.py  __main__.py  core.py
amazon/: aliases.zsh  aws.zsh  completion.zsh  dp-inline.vim  foo.zsh
autoenv/: autoenv.zsh.symlink
claude/: CLAUDE.md  CLAUDE.personal.md  self-improve.md  settings.json  statusline.sh
clawd-founders/: AGENTS.md  HEARTBEAT.md  IDENTITY.md  SOUL.md  USER.md  founders.txt  scratch-plugin-audit.md
clawdbot/: clawdbot.json  clawdbot.json.bak
codex/: config.toml
colorls/: dark_colors.yaml
completions/: _dev
dev-server/: Dockerfile  fly.toml  setup.sh
fasd/: install.sh
fonts/: install.sh
functions/: have  transfer
fzf/: fzf.zsh
ghostty/: config  morning.config
git/: aliases.zsh  gitconfig.symlink.example  gitignore.symlink
grml/: grml.zsh
homebrew/: brew-wrapper.zsh  homebrew.zsh
host/: alias.zsh
hub/: install.sh
jetbrains/: .ideavimrc.symlink
launchd/: com.michael.claude-evening.plist  com.michael.claude-morning.plist  com.michael.claude-skill-curator.plist  com.michael.codex-as-api.plist  com.michael.email-index.plist  (+1 more)
lazygit/: config.yml
(+1950 files in other folders)
